Drop-down menu tilføjelser

--- a/css/maps.css
+++ b/css/maps.css
@@ -1,16 +1,40 @@
-/* 
- * Always set the map height explicitly to define the size of the div element
- * that contains the map. 
- */
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  
+}
+ .navigation {
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  padding: .5rem;
+  gap: 1rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ }
+ 
+ .link {
+  background: none;
+  border: none;
+  text-decoration: none;
+  color: #000000;
+  font-size: 15px;
+  cursor: pointer;
+  
+ }
+
+ .link:hover {
+  color: #57B33C;
+ }
+ 
+ 
+ 
  #map {
     height: 600px;
     width: 600px;
   }
 
-  body {
-    font-family: sans-serif;
-    
-  }
+ 
 
   .map-button {
     background-color: #4CAF50; /* Green */
