--- a/css/maps.css
+++ b/css/maps.css
@@ -11,6 +11,9 @@ body {
   padding: .5rem;
   gap: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: fixed;
+  width: 100%;
+  height: 40px;
  }
  
  .link {
@@ -28,10 +31,37 @@ body {
  }
  
  
- 
+ .dropdown {
+  position: relative;
+ }
+
+ .dropdown-menu {
+  position: absolute;
+  left: 0;
+  top: calc(100% + .50rem);
+  background-color: #57B33C;
+  color: #ffffff;
+  padding: .75rem;
+  border-radius: .15rem;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
  #map {
+  margin-top: 100px;
     height: 600px;
-    width: 600px;
+    width: 700px;
   }
 
  
