--- a/css/maps.css
+++ b/css/maps.css
@@ -4,6 +4,8 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
+
+  /* Menubar --- starter */
   
 }
  .navigation {
@@ -97,6 +99,7 @@ body {
   margin-right: 10px;
 }
 
+ /* Menubar --- slutter */
 
 
 
@@ -108,6 +111,7 @@ body {
 
 
 
+ /* map --- starter */
 
  #map {
     height: 600px;
@@ -127,4 +131,4 @@ body {
     font-size: 16px;
   }
 
-
+ /* Menubar --- slutter */
