--- a/css/maps.css
+++ b/css/maps.css
@@ -32,7 +32,7 @@ body {
   border: none;
   text-decoration: none;
   color: #000000;
-  font-size: 20px;
+  font-size: 30px;
   cursor: pointer;
   
  }
@@ -47,8 +47,8 @@ body {
   background: none;
   border: none;
   text-decoration: none;
-  color: #000000;
-  font-size: 15px;
+  color: #ffffff;
+  font-size: 25px;
   cursor: pointer;
   justify-content: left;
   align-items: center;
@@ -56,7 +56,7 @@ body {
  }
 
  .link-2:hover {
-  color: #ffffff;
+  color:#000000;
  }
  
  
@@ -111,13 +111,13 @@ table {
   border-radius: .30rem;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
   padding: 10px;
-  font-size: 15px;
+  font-size: 25px;
 }
 
+
+
 .icons-table {
-  fill: #F1C40F;
-  width: 32px;
-  height: 32px;
+  fill: #000000;
   margin-right: 10px;
 }
 
