--- a/css/maps.css
+++ b/css/maps.css
@@ -14,7 +14,7 @@ body {
   background-color: #ffffff;
   display: flex;
   align-items: center;
-  padding: .5rem;
+  padding: 30px;
   gap: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 100%;
@@ -25,7 +25,7 @@ body {
 
  
  header {
-  margin-bottom: 100px;
+  margin-bottom: 200px;
  }
  .link  {
   background: none;
