removed old files

--- a/css/maps.css
+++ b/css/maps.css
@@ -111,6 +111,11 @@ body {
   margin-bottom: .5rem;
 }
 
+.login-svg {
+  width: 56px;
+  height: 56px;
+}
+
  /* Menubar --- slutter */
 
  /* Links table --- starter */
