--- a/css/maps.css
+++ b/css/maps.css
@@ -228,11 +228,13 @@ th {
   padding: 10px;
   flex-wrap: wrap;
   max-width: 400px;
+  border-radius: .30rem 0 0 .30rem;
 }
  #map {
   display: flex;
   height: 600px;
   width: 800px;
+  border-radius: 0 .30rem .30rem 0;
   }
 
  
