--- a/css/maps.css
+++ b/css/maps.css
@@ -9,17 +9,18 @@ body {
   
 }
  .navigation {
+  display: flex;
+  flex-wrap: wrap;
   position: fixed;
   top: 0;
   background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding: 30px;
   gap: 1rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 100%;
-  height: 40px;
+  height: auto;
   z-index: 9999; /* Ensure the navigation is on top of other elements */
   
  }
@@ -74,6 +75,7 @@ body {
  
  
  .dropdown {
+  padding: 20px;
   position: relative;
  }
 
@@ -125,6 +127,33 @@ body {
 .login-svg {
   width: 64px;
   height: 64px;
+}
+
+.login-btn {
+  background-color: #357FFF; /* Green */
+  border: none;
+  color: white;
+  padding: 12px 18px;
+  border-radius: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.login-btn:hover {
+  background-color: #000000;
+}
+
+.login-heading {
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.login-container{
+  display: flex;
+  justify-content: center;
 }
 
 /* Menubar --- slutter */
