--- a/css/maps.css
+++ b/css/maps.css
@@ -192,13 +192,43 @@ th {
 
 /* Links table --- slutter */
 
+/* GreenWheels & infografik --- Starter */
 
+.om-greenwheels-container {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+}
 
+.info-grafik-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+}
 
+.info-grafik-img {
+  width: 500px;
+  height: 400;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
+}
 
+.introdoktion-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #57B33C;
+  width: 700px;
+  height: 300px;
+  padding: 40px;
+  margin-right: 20px;
+  border-radius: 0 .30rem .30rem 0;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
+}
 
-
-
+/* GreenWheels & infografik --- slutter */
 
 
 
@@ -272,6 +302,40 @@ th {
   }
 
 /* map --- slutter */
+
+/* Ladeboks cards --- starter */
+
+
+
+
+
+
+
+
+
+
+
+
+.card-button {
+  background-color: #357FFF;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  border-radius: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 2px;
+}
+
+.card-button:hover {
+  background-color: #000000;
+
+}
+
+/* Ladeboks cards --- slutter */
 
 /* Footer --- starter */
 
