--- a/css/maps.css
+++ b/css/maps.css
@@ -27,7 +27,17 @@ body {
   z-index: 9999; /* Ensure the navigation is on top of other elements */
  }
 
+ .navigation-logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  
+ }
  .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 600;
   font-size: 30px;
  }
@@ -54,6 +64,7 @@ body {
  .link:hover {
   color: #57B33C;
   fill: #57B33C;
+  z-index: 1;
  }
 
  .link-2  {
@@ -97,6 +108,7 @@ body {
   opacity: 1;
   transform: translateY(0);
   pointer-events: auto;
+  z-index: 2;
 }
 
 .information-grid {
@@ -151,6 +163,31 @@ body {
   justify-content: center;
 }
 
+@media screen and (max-width: 600px) {
+  .navigation {
+    position: relative;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 0px;
+  }
+  
+  .link,
+  .link-2 {
+    font-size: 20px;
+  }
+  
+  .dropdown-menu {
+    top: 100%;
+    left: 0;
+    transform: translateY(10px);
+  }
+  header {
+    margin-bottom: 100px;
+  }
+
+}
+
 /* Menubar --- slutter */
 
 /* Links table --- starter */
@@ -166,7 +203,9 @@ table {
   max-width: fit-content;
   height: auto;
 }
-
+tr {
+  max-width: 100%;
+}
 td {
   max-width: 100%
 }
@@ -196,6 +235,18 @@ th {
   font-weight: 400;
 }
 
+@media only screen and (max-width: 600px) {
+  table {
+    font-size: 20px;
+    max-width: 100%;
+  }
+
+  .table-content-h2 {
+    min-width: auto;
+    font-size: 25px;
+  }
+}
+
 /* media til table --- starter */
 
 
@@ -208,23 +259,26 @@ th {
 
 .om-greenwheels-container {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap-reverse;
   color: #ffffff;
+  margin: 40px;
 }
 
 .info-grafik-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 20px;
+  margin: 40px;
 }
 
 .info-grafik-img {
-  max-width: 100%;
-  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 70%;
+  height: auto;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
   border-radius: .30rem;
 }
@@ -234,12 +288,31 @@ th {
   justify-content: center;
   align-items: center;
   background-color: #57B33C;
-  width: 700px;
-  height: 300px;
   padding: 40px;
-  margin-right: 20px;
   border-radius: .30rem;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
+  min-width: 465px;
+  height: 250px;
+}
+
+@media (max-width: 768px) {
+  .om-greenwheels-container {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  .info-grafik-container {
+    
+    width: auto;
+    height: auto;
+  }
+  
+  .introdoktion-container {
+    width: auto;
+    height: auto;
+    
+  }
 }
 
 /* GreenWheels & infografik --- slutter */
@@ -313,9 +386,6 @@ th {
   .map-button:hover {
     background-color: #000000;
   }
-
-
-
 
 
 
