--- a/css/maps.css
+++ b/css/maps.css
@@ -304,8 +304,8 @@ th {
   
   .info-grafik-container {
     
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
   }
   
   .introdoktion-container {
@@ -325,6 +325,7 @@ th {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 20px;
 }
 
 .header-1 {
@@ -335,6 +336,7 @@ th {
 .button-container {
   display: flex;
   flex-direction: row;
+  margin: 40px;
 }
 
 .btn-grp-headline {
@@ -389,7 +391,7 @@ th {
 
 
 
-@media only screen and (min-width: 601px) and (max-width: 950px) {
+@media only screen and (min-width: 601px) and (max-width: 1023px) {
   .map-container {
     padding: 10px;
   }
