--- a/css/maps.css
+++ b/css/maps.css
@@ -7,10 +7,12 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-
-  /* Menubar --- starter */
-  
 }
+
+
+
+/* Menubar --- starter */
+
  .navigation {
   display: flex;
   flex-wrap: wrap;
@@ -423,7 +425,7 @@ th {
 
 /* map --- slutter */
 
-/* Ladeboks cards --- starter */
+/* Ladeboks card EnergiFyn  --- starter */
 
 .card-container {
   display: flex;
@@ -473,7 +475,6 @@ th {
   font-weight: 600;
 }
 
-
 .card-button {
   background-color: #357FFF;
   border: none;
@@ -493,7 +494,14 @@ th {
 
 }
 
-/* Ladeboks cards --- slutter */
+/* Ladeboks card EnergiFyn --- slutter */
+
+/* Ladeboks card OK --- starter */
+
+
+
+
+/* Ladeboks card OK --- slutter */
 
 /* Footer --- starter */
 
