--- a/css/maps.css
+++ b/css/maps.css
@@ -509,7 +509,7 @@ th {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #57B33C;
+  background-color: #357FFF;
   padding: 20px;
   border-radius: .30rem;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
@@ -542,7 +542,23 @@ th {
   font-weight: 400;
 }
 
+.card-button-ok {
+  background-color: #57B33C;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  border-radius: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 2px;
+}
 
+.card-button-ok:hover {
+  background-color: #000000;
+}
 
 /* Ladeboks card OK --- slutter */
 
