--- a/css/maps.css
+++ b/css/maps.css
@@ -472,6 +472,7 @@ body {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  text-align: center;
 }
 
 .card-content {
@@ -516,13 +517,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 40px;
 
 }
-.ok-flex {
+
+.ok-flex-row {
   display: flex;
-  flex-direction: row;
+  text-align: center;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   background-color: #357FFF;
   padding: 20px;
   border-radius: .30rem;
@@ -534,27 +538,23 @@ body {
 
 .ok-content-row-container {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
-}
-
-.ok-content-row {
-  display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
 }
 
-.ok-content-column {
+.ok-content-box {
+  text-align: center;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   padding: 10px;
   font-size: 15px;
   font-weight: 400;
 }
+
 
 .card-button-ok {
   background-color: #57B33C;
