--- a/css/maps.css
+++ b/css/maps.css
@@ -286,14 +286,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 40px;
+  max-width: 70%;
+  padding: 40px;
 }
 
 .info-grafik-img {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 70%;
   height: auto;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
   border-radius: .30rem;
@@ -526,9 +526,10 @@ body {
   text-align: center;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   background-color: #357FFF;
   padding: 20px;
+  margin: 5px;
   border-radius: .30rem;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
   color: #ffffff;
@@ -541,6 +542,8 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  padding: 10px;
+  text-align: center;
 }
 
 .ok-content-box {
@@ -578,7 +581,14 @@ body {
 
 /* Ladeboks card CLEVER --- starter */
 
+.p-content-max-width {
+  max-width: 400px;
+  height: auto;
+}
 
+.green {
+  background-color: #57B33C;
+}
 
 /* Ladeboks card CLEVER --- slutter */
 
